# NVPhTM

./: .gitignore  .gitmodules  README.md  plot-table.py
NOrec/: Makefile.template  WBMMPolicy.cpp  algs.cpp  cbr.cpp  cgl.cpp  hybrid-cohorts.cpp  hytm-norec.cpp  inst.cpp  norec.cpp  policies.cpp  profiling.cpp  rh-norec.cpp  serial.cpp  static.cpp  txthread.cpp
NOrec/include/: cm.hpp  profiling.hpp
NOrec/include/algs/: algs.hpp  tml_inline.hpp
allocators/: clean-allocators.sh  gen-allocators.sh
allocators/IBMmalloc/: Makefile  ibmmalloc.c
htm/: Makefile.template  aborts_profiling.h  htm.c  htm.h  locks.h
htm/haswell/: hle.h  rtm.h
htm/power8/: rtm.h
htm/test/: Makefile  hle-test.c  htm-test.c
msr/: Makefile  msr.c  msr.h  pmu.c  pmu.h
nvhtm/htm_alg/: .gitignore  CMakeLists.txt  compile.sh
nvhtm/htm_alg/include/: htm_retry_template.h
nvhtm/htm_alg/src/: htm.cpp
nvhtm/minimal_nvm/: CMakeLists.txt  cmake_deb.txt  cmake_utils.txt  compile.sh  main.c
nvhtm/nh/: Makefile  Makefile_common.inc  Makefile_htm_only.inc  Makefile_nvhtm.inc  Makefile_nvhtm_lc.inc  Makefile_nvhtm_pc.inc  Makefile_options.inc  Makefile_phtm.inc  README  TODO.txt  compile.sh  run_in_node.sh  useful_info.txt
phasedTM/: Makefile.template  phTM.c  phTM.h  phase_profiling.h  types.h  utils.h
phasedTM/test/: Makefile  Makefile.common  main.c  tm.h
scripts/: clean  compile  execute  find-limits.awk  genPlotData  genPlotData2  genSetSizeFile.awk  genTexTable  mean_ci.R  plot  plot-intset-phaseviz.gnu  plot-stamp-phaseviz.gnu  scripts.cfg  split-intset.awk  split-stamp.awk
(+212 files in other folders)
